[tool.poetry]
name = "dl-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache2"
readme = "README.md"
packages = [{include = "dl_project"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
